// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTP event resources getHTTPEvent should resolve with an existing CustomField on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/integrations/1/events/1",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`HTTP event resources getHTTPEvents should resolve with a list of http events on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/integrations/1/events/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;
